Fixed tab scrolling and tab editing on iOS.

--- a/modules/gui/frontend/src/widget/formComponents.module.css
+++ b/modules/gui/frontend/src/widget/formComponents.module.css
@@ -90,6 +90,11 @@ textarea::placeholder {
     font-style: italic;
 }
 
+input.readOnly,
+textarea.readOnly {
+    pointer-events: none;
+}
+
 .error input,
 .error textarea {
     --error-border-color: #e81351;
